# Object-Detection

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: browse_models.py  detect_webcam_distance.py  detect_webcam_fast.py  detect_with_preset.py
src/detector/: __init__.py  detect.py
src/drone_object_detection/: __init__.py  distance_detector.py  models_config.py
