[project]
name = "drone-object-detection"
version = "0.1.0"
description = "Real-time object detection for autonomous drones"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
detect = "detector.detect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detector"]
